--- a/playbooks/initialsetup/jump_initial.yml
+++ b/playbooks/initialsetup/jump_initial.yml
@@ -14,3 +14,13 @@
       apt:
         name: httpie
         state: present
+
+    - name: "Install curl package"
+      apt:
+        name: curl
+        state: present
+
+    - name: "Install unzip package"
+      apt:
+        name: unzip
+        state: present
