--- a/playbooks/app/screen/screen.yml
+++ b/playbooks/app/screen/screen.yml
@@ -3,7 +3,9 @@
 - name: "Configuration SCREEN"
   hosts: all
   remote_user: bpr
-  sudo: yes
+  become: yes
+  become_user: root
+  become_method: sudo
 
   tasks:
     - name: "Install SCREEN package"
