--- a/playbooks/initialsetup/deb_addpackage.yml
+++ b/playbooks/initialsetup/deb_addpackage.yml
@@ -3,7 +3,9 @@
 - name: "Debian initial setup - additionnal packages"
   hosts: all
   remote_user: bpr
-  sudo: yes
+  become: yes
+  become_user: root
+  become_method: sudo
   
   tasks:
     - name: "Update apt"
