--- a/playbooks/role/all.yml
+++ b/playbooks/role/all.yml
@@ -3,7 +3,9 @@
 - name: "All host - conformity"
   hosts: all
   remote_user: bpr
-  sudo: yes
+  become: yes
+  become_user: root
+  become_method: sudo
   
   tasks:
     - name: "Update apt"
